--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/python:3.7
 
-    working_directory: ~/repo
+    working_directory: ~/CalculatorLibrary
 
     steps:
       # Step 1: obtain repo from GitHub
