--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
-# Python CircleCI 2.0 configuration file cool
+# Python CircleCI 2.0 configuration file
+# https://realpython.com/python-continuous-integration/#what-is-continuous-integration
 version: 2
 jobs:
   build:
